feat(home/emacs): custom startup hooks from doom

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -61,6 +61,7 @@ Disable a bunch of miscellaneous things to improve both startup and redisplay pe
 #+end_src
 
 * Definitions
+** Macros
 Some macros to make configuration more concise (basically, emulating some of ~use-package~'s features, since I'm not using it).
 
 #+begin_src elisp
@@ -107,6 +108,33 @@ Some macros to make configuration more concise (basically, emulating some of ~us
     `(lambda ()
        (interactive)
        ,@body))
+#+end_src
+
+** Hooks
+Custom hooks copied from [[https://github.com/doomemacs/doomemacs/blob/ba1dca322f9a07bc2b7bec6a98f2c3c55c0bbd77/lisp/doom.el#L795-798][Doom Emacs]] to facilitate lazy-loading and better init time/time-to-first-display.
+#+begin_src elisp
+  (defvar my/first-input-hook nil
+    "Functions to run after the first command is run.
+  Only run once.")
+
+  (defvar my/first-file-hook nil
+    "Functions to run after the first file is opened.
+  Only run once.")
+
+  (defun my/run-first-input-hook ()
+    "Run `my/first-input-hook' and remove it."
+    (run-hooks 'my/first-input-hook)
+    (remove-hook 'pre-command-hook #'my/run-first-input-hook))
+
+  (defun my/run-first-file-hook ()
+    "Run `my/first-file-hook' and remove it."
+    (run-hooks 'my/first-file-hook)
+    (remove-hook 'find-file-hook #'my/run-first-file-hook)
+    (remove-hook 'dired-initial-position-hook #'my/run-first-file-hook))
+
+  (add-hook 'pre-command-hook #'my/run-first-input-hook -101)
+  (add-hook 'find-file-hook #'my/run-first-file-hook -101)
+  (add-hook 'dired-initial-position-hook #'my/run-first-file-hook -101)
 #+end_src
 
 * Libraries
