--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -342,6 +342,7 @@ For the [[help:sp-with-modes][sp-with-modes]] macro.
   (setq-default scroll-conservatively 10
                 scroll-margin 4
                 scroll-preserve-screen-position t
+                next-screen-context-lines 4
                 auto-window-vscroll nil
                 fast-but-imprecise-scrolling t)
 #+end_src
