feat(home/emacs): add tikz to org latex, increase live delay

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2299,14 +2299,20 @@ Automatically toggles certain markers on and off depending on whether they're be
             org-appear-autoentities   t))
 #+end_src
 
-** LaTeX Previews
+** LaTeX
+#+begin_src elisp
+  (after! org
+    (setopt org-latex-packages-alist '(("" "tikz" t))))
+#+end_src
+
+*** Previews
 #+begin_src elisp
   (add-hook 'org-mode-hook #'org-latex-preview-auto-mode)
 
   (after! org-latex-preview
     (setopt org-latex-preview-process-default 'dvisvgm
             org-latex-preview-live t
-            org-latex-preview-live-debounce 0.25)
+            org-latex-preview-live-debounce 0.5)
     (plist-put org-latex-preview-appearance-options :page-width 0.8))
 #+end_src
 
