--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2313,8 +2313,7 @@ Automatically toggles certain markers on and off depending on whether they're be
   (after! org-latex-preview
     (setopt org-latex-preview-process-default 'dvisvgm
             org-latex-preview-live t
-            org-latex-preview-live-debounce 0.5)
-    (plist-put org-latex-preview-appearance-options :page-width 0.8))
+            org-latex-preview-live-debounce 0.5))
 #+end_src
 
 ** Org Download
