--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -68,6 +68,7 @@ Some macros to make configuration more concise (basically, emulating some of ~us
   (defmacro after! (files &rest body)
     "Evaluate BODY after FILES have been loaded. Thin wrapper
    around `with-eval-after-load', inspired by Doom."
+    (declare (indent defun))
     (cond
      ((null files)
       `(progn ,@body))
@@ -77,7 +78,6 @@ Some macros to make configuration more concise (basically, emulating some of ~us
      (t
       `(with-eval-after-load ',files
          ,@body))))
-  (put 'after! 'lisp-indent-function 'defun)
 #+end_src
 
 #+begin_src elisp
