fix(home/emacs): grouping in org-indent override
Can you tell I don't use inline tasks?

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2251,8 +2251,8 @@ This is a highly custom and probably fragile setup for ~org-indent~ that uses pi
                   (cond ((<= n 1) "")
                         ((bound-and-true-p org-inlinetask-show-first-star)
                          (concat org-indent-inlinetask-first-star
-                                 (substring heading-prefix 1)
-                                 (t (org-add-props heading-prefix nil 'face 'org-indent)))))))
+                                 (substring heading-prefix 1)))
+                        (t (org-add-props heading-prefix nil 'face 'org-indent)))))
           ;; Text line prefixes.
           (aset org-indent--text-line-prefixes
                 n
