--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1298,9 +1298,10 @@ Currently disabled cause it throws a cryptic error that I don't feel like tracki
 #+end_src
 
 #+begin_src elisp
-  (autoload-many "diff-hl" nil #'diff-hl-magit-pre-refresh #'diff-hl-magit-post-refresh)
-  (add-hook 'find-file-hook #'diff-hl--global-turn-on)
-  (add-hook 'magit-pre-refresh-hook #'diff-hl-magit-pre-refresh)
+  (autoload #'diff-hl-magit-post-refresh "diff-hl")
+
+  (add-hook 'find-file-hook #'turn-on-diff-hl-mode)
+  (add-hook 'dired-mode-hook #'diff-hl-dired-mode)
   (add-hook 'magit-post-refresh-hook #'diff-hl-magit-post-refresh)
 #+end_src
 
