feat(home/emacs): command to delete active file

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -689,10 +689,24 @@ Some personal prefix keymaps that I bind to throughout my config; I bind them to
              ("C-c t" . my/toggle-map))
 #+end_src
 
-Buffer management keys.
+** Buffers
+There's no built-in function to delete the current file, so here's mine.
+#+begin_src elisp
+  (defun my/delete-this-file ()
+    "Delete the current buffer's file and kill the buffer."
+    (interactive)
+    (unless buffer-file-name
+      (user-error "Current buffer is not visiting a file"))
+    (when (yes-or-no-p (concat "Really delete " buffer-file-name "?"))
+      (delete-file buffer-file-name)
+      (kill-buffer)
+      (message "Deleted %s" buffer-file-name)))
+#+end_src
+
 #+begin_src elisp
   (bind-keys :map my/buffer-map
              ("b" . switch-to-buffer)
+             ("D" . my/delete-this-file)
              ("k" . kill-current-buffer)
              ("K" . kill-buffer)
              ("q" . kill-buffer-and-window)
