feat(home/emacs): lazy-load corfu

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1100,29 +1100,30 @@ Repeat map for candidate navigation.
 
 ** Corfu
 #+begin_src elisp
-  (require 'corfu)
+  (add-hook 'my/first-input-hook #'global-corfu-mode)
 
-  (bind-keys :map corfu-map
-             ("<tab>" . corfu-next)
-             ("<backtab>" . corfu-previous)
-             ("M-q" . corfu-quick-insert))
-  (setq tab-always-indent 'complete
-        corfu-min-width 20
-        corfu-quit-no-match nil
-        corfu-quit-at-boundary 'separator
-        corfu-preview-current 'insert
-        corfu-preselect 'prompt
-        corfu-cycle t
-        corfu-popupinfo-delay '(1.25 . 0.5)
-        corfu-quick1 "arstneio"
-        corfu-quick2 corfu-quick1)
+  (after! corfu
+    (bind-keys :map corfu-map
+               ("<tab>" . corfu-next)
+               ("<backtab>" . corfu-previous)
+               ("M-q" . corfu-quick-insert))
+    
+    (setq tab-always-indent 'complete
+          corfu-min-width 20
+          corfu-quit-no-match nil
+          corfu-quit-at-boundary 'separator
+          corfu-preview-current 'insert
+          corfu-preselect 'prompt
+          corfu-cycle t
+          corfu-popupinfo-delay '(1.25 . 0.5)
+          corfu-quick1 "arstneio"
+          corfu-quick2 corfu-quick1)
 
-  (custom-set-faces
-   '(corfu-default ((t (:inherit fixed-pitch)))))
+    (custom-set-faces
+     '(corfu-default ((t (:inherit fixed-pitch)))))
 
-  (global-corfu-mode)
-  (corfu-popupinfo-mode)
-  (corfu-history-mode)
+    (corfu-popupinfo-mode)
+    (corfu-history-mode))
 #+end_src
 
 =Cape= provides many various completion-at-point functions (=capfs=), which help extend =Corfu=, which itself extends Emacs' native completion-at-point functionality. All the functions have autoloads, but [[help:completion-at-point-functions][completion-at-point-functions]] is usually buffer-local, so we use a hook to add it 👍.
