--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -243,7 +243,8 @@ Again, don't leave random backup files and lockfiles everywhere.
 ** Auto-save
 #+begin_src elisp
   (setq auto-save-default nil)
-  (auto-save-visited-mode)
+
+  (add-hook 'my/first-file-hook #'auto-save-visited-mode)
 #+end_src
 
 ** Auto-reload
